array.island.Island.scala.error
Compilation error:
Island:9: error: not found: value liste2
      liste2 = concat(list,dernier)
      ^